--- a/estilos.css
+++ b/estilos.css
@@ -60,6 +60,13 @@ h4 {
     font-size: 16px;
 }
 
+.card-text3 {
+    color: #000; 
+    font-size: 16px;
+    font-weight: bold;
+    text-align: right;
+}
+
 .divisor {
     font-size: 24px;
     font-weight: bold;
